...
    public static var allCases: [BlendMode]{
        [.color, .colorBurn, .colorDodge, .darken, .destinationOut, .destinationOver, .difference, .exclusion, .hardLight, .hue, .lighten, .luminosity, .multiply, .normal, .overlay, .plusDarker, .plusLighter, .saturation, .screen, .softLight, .sourceAtop]
    }
    
    var description: String {
        switch self {
        case .color:
            return ".color"
        case .colorBurn:
            return ".colorBurn"
        case .colorDodge:
            return ".colorDodge"
        case .darken:
...
